# AI-Quant-Research-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: base.yaml  institutional_snapshot_demo.yaml  institutional_snapshot_membership_demo.csv  point_in_time_synthetic_demo.yaml  universe_membership_demo.csv  yahoo_nasdaq_demo.yaml
data/golden/: borrow_availability_demo.csv  institutional_locked_holdout_manifest.yaml  institutional_ohlcv_snapshot.csv  institutional_ohlcv_snapshot.yaml
docs/: ARCHITECTURE.md  TEST_MATRIX.md  TRACE_SPEC.md
docs/decisions/: 0008-python-cli-quant-research-mvp.md  0009-level-1-production-research-platform.md  0010-safe-production-extension-boundaries.md  0011-llm-facing-research-loop-boundary.md  0012-governed-llm-provider-boundary.md  0013-human-review-gate.md  0014-review-audit-ledger.md  (+15 more)
reports/: institutional_snapshot_research_report.md  point_in_time_synthetic_research_report.md  sample_research_report.md  yahoo_nasdaq_research_report.md
results/: experiments.csv
scripts/: run_daily_research.sh
src/: __init__.py  main.py
tests/: test_backtest_holdout.py  test_cli_e2e.py  test_data_loader.py  test_experiment_family.py  test_factors.py  test_locked_holdout.py  test_managed_registry.py  test_production_extensions.py  test_production_research_platform.py  test_promotion_authorization.py  test_research_agents.py  test_research_job_queue.py  test_research_validity.py  test_run_comparison.py  test_universe.py  test_workflow.py
(+150 files in other folders)
